@@ -1,5 +1,6 @@
 DIST randrproto-1.1.2.tar.bz2 38372 RMD160 cd0804a515784681d1587339aa5983e8e7f49f83 SHA1 77a4b0f1947e243fcc25e2645ab0da988fdd653e SHA256 00a8c8af96097ed831a6f02c138c1a04a0226b64e446b4d7c824930dc43eb98d
 DIST randrproto-1.2.0.tar.bz2 52599 RMD160 f95d4051b472548af1c51359a40b20524e613663 SHA1 8471675e07fc43424aafc7cfd65a2952d10479bb SHA256 11451c046d49d88dbfcb1f54a37f5e2a9d8cca1f25a9194a400a14d5157848fb
+DIST randrproto-1.2.1.tar.bz2 54962 RMD160 544919ec5a62a35949e49d7c183a85001a7c50f2 SHA1 f8698f76f23d856e1821339814a986b9d876d87d SHA256 102fd42f8f2562450f4e45c28bfb0390c2d30ffa6a805eead15d67018930f654
 EBUILD randrproto-1.1.2.ebuild 474 RMD160 f578b266e0ccfa5961efd06b6e40a4a85450cab4 SHA1 fb9d579c11ff80c40d481a1f1f4f4c2a8b89dcc8 SHA256 bf9eb4768fc82ddb0f3cbd65afe9d84430e34a315f3dcf6cfa39bbc953394dd3
 MD5 ae4e8c16fb72b55fbd75276aa920df67 randrproto-1.1.2.ebuild 474
 RMD160 f578b266e0ccfa5961efd06b6e40a4a85450cab4 randrproto-1.1.2.ebuild 474
@@ -8,10 +9,14 @@ EBUILD randrproto-1.2.0.ebuild 485 RMD160 91926e4d33eb0f04a1404dd2ba5e6eab446c89
 MD5 6dbe5f2bcd86876569213455c2079961 randrproto-1.2.0.ebuild 485
 RMD160 91926e4d33eb0f04a1404dd2ba5e6eab446c8940 randrproto-1.2.0.ebuild 485
 SHA256 446cca41e47a789e5a9968bbb09b555781974a1bae4af552abea2258971bbb27 randrproto-1.2.0.ebuild 485
-MISC ChangeLog 3487 RMD160 69c78ecddc6ff56a71c358d18eac402fdeccd344 SHA1 dda6aacfbbed631537e8f0affb543c469460be1d SHA256 2ea612ea8891b89a46e75f492e8a2703538426ae0468c4ac54ffd96e9a1d7481
-MD5 aa47b0e62117aad8fcd25cc7c50182a8 ChangeLog 3487
-RMD160 69c78ecddc6ff56a71c358d18eac402fdeccd344 ChangeLog 3487
-SHA256 2ea612ea8891b89a46e75f492e8a2703538426ae0468c4ac54ffd96e9a1d7481 ChangeLog 3487
+EBUILD randrproto-1.2.1.ebuild 485 RMD160 4520c9a12c5e360a390ac0281458674250eb507d SHA1 978949f5cd4f42d87bf3a869bb72b2bd1665b25a SHA256 1414807d482ae2c97d248c60c99cbd63d0da47b4afce91a7197f63586b380c9f
+MD5 079b6317b3a7bfb66617d415fd8e54b7 randrproto-1.2.1.ebuild 485
+RMD160 4520c9a12c5e360a390ac0281458674250eb507d randrproto-1.2.1.ebuild 485
+SHA256 1414807d482ae2c97d248c60c99cbd63d0da47b4afce91a7197f63586b380c9f randrproto-1.2.1.ebuild 485
+MISC ChangeLog 3645 RMD160 9961bc2ee8fe824db72ecff507e6450dbff1d487 SHA1 fe766b4fa434e9b6d7b5e92408109a0f47da08e1 SHA256 0ccd2ada07d803e9c591e446f69e3a1432d0d953ba1bbfb8a12cbc4be6dea944
+MD5 3cdfde699f24b62ce48063f6a4a3e773 ChangeLog 3645
+RMD160 9961bc2ee8fe824db72ecff507e6450dbff1d487 ChangeLog 3645
+SHA256 0ccd2ada07d803e9c591e446f69e3a1432d0d953ba1bbfb8a12cbc4be6dea944 ChangeLog 3645
 MISC metadata.xml 156 RMD160 c1274bdccf57603d580de0075ba07a35b7509560 SHA1 6f78f604e3d079d39189b40aaaa1ddb06182ad91 SHA256 5101ab0d4cc8c7125eea733c44e86962769bd77acaf53b69223b9cadcdd29055
 MD5 a37bab73e2f24b213932c30997d3d360 metadata.xml 156
 RMD160 c1274bdccf57603d580de0075ba07a35b7509560 metadata.xml 156
@@ -22,3 +27,6 @@ SHA256 4a467759a822aec534b9160ae172b7176d754b38a42184bc339736c96e16f719 files/di
 MD5 1c7d66e093c240b046cbbcce6564e782 files/digest-randrproto-1.2.0 250
 RMD160 06a7f60056859fbbd1c65107e82b6e5c02f47d9a files/digest-randrproto-1.2.0 250
 SHA256 151ecd7c537ecf64bf58090a080b36507c8c2ad8ecf9de028d47460d92e95f69 files/digest-randrproto-1.2.0 250
+MD5 ca9944cea9b40d7701c3f5211aa826bd files/digest-randrproto-1.2.1 250
+RMD160 91cbef5d19549a4cdbf1bed5b788b3ecc41d7a68 files/digest-randrproto-1.2.1 250
+SHA256 095ce4de683e8fc856bce9c790140643bb65df2ddfe3f722adbd5897221b8887 files/digest-randrproto-1.2.1 250
