@@ -1,0 +1,3 @@
+MD5 e2e45564f8ce22e00e1360e79c8ccdeb randrproto-1.2.1.tar.bz2 54962
+RMD160 544919ec5a62a35949e49d7c183a85001a7c50f2 randrproto-1.2.1.tar.bz2 54962
+SHA256 102fd42f8f2562450f4e45c28bfb0390c2d30ffa6a805eead15d67018930f654 randrproto-1.2.1.tar.bz2 54962
