@@ -1,6 +1,12 @@
 # ChangeLog for x11-proto/randrproto
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-proto/randrproto/ChangeLog,v 1.29 2007/02/04 18:08:36 joshuabaergen Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-proto/randrproto/ChangeLog,v 1.30 2007/02/19 22:53:33 joshuabaergen Exp $
+
+*randrproto-1.2.1 (19 Feb 2007)
+
+  19 Feb 2007; Joshua Baergen <joshuabaergen@gentoo.org>
+  +randrproto-1.2.1.ebuild:
+  Version bump.  Includes minor fixes.
 
   04 Feb 2007; Joshua Baergen <joshuabaergen@gentoo.org>
   randrproto-1.1.2.ebuild, randrproto-1.2.0.ebuild:
